# campus-rag-assistant

./: .env.example  .env.test  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  NOTICE  Procfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  root-open-k6.js  ruff.toml  run_services.sh  tox.ini
.ebextensions/: 00_ami.config
.githooks/: commit-msg  pre-commit  pre-push  tool_attribution_guard.py
.github/: pull_request_template.md
backend/: verify_configs.py
backend-api/: verify_configs.py
changelog/: CHANGELOG.md  README.md  _template.md
docs/: ARCHITECTURE.md  CI.md  DESIGN.md  DOC_AUDIT.md  E2E.md  EVALUATION.md  EXECUTION_PLAN.md  LOAD_TESTING.md  OPERATIONS.md  PERFORMANCE.md  PORTFOLIO.md  PORTFOLIO_CASE_STUDY.md  PRODUCTION_HARDENING.md  PRODUCTION_TLS.md  README.md  RELEASE.md  REVIEWER_GUIDE.md  SECURITY.md  TENANT_CONFIG.md  changelog.md  eval_baseline_2026-05-19.md  eval_baseline_v2.md  index.md  notice.md  requirements.txt
frontend/: app.py
frontend-vue/: .env.example  .gitignore  README.md  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.shared.config.ts  vitest.config.ts
load-tests/: k6-auth-chat-session.js  k6-smoke.js  seed_users.py  users.json
scripts/: bootstrap_golden_dataset.py  check_docs.py  init-db.sql  install-hooks.sh  kill-dev-servers.sh  new-changelog.sh  promote_golden_draft.py  run-backend-loadtest.sh  run-backend-venv.sh  run-frontend-vue.sh  run_eval_phase5.sh  (+1 more)
(+303 files in other folders)
